Revised Amazon reviews project file

--- a/Beauty_5.json.ipynb
+++ b/Beauty_5.json.ipynb
@@ -1301,7 +1301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Taking a Random Sample of  1000 observations from reviews the dataset to minimize the computation cost in the modeling building process\n",
+    "# Taking a Random Sample of  1000 observations from reviews the dataset to minimize the computation cost in the model building process\n",
     "# you can use random_state for reproducibility\n",
     "reviews_n = reviews.sample(n=1000, random_state=2)"
    ]
